--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 
-Hug==2.6.0
-pytest==5.2.1
-psycopg2==2.8.3
+Hug
+pytest
+psycopg2
+PyYAML
+gunicorn
+codecov
+coveralls
+pytest-cov
+python-coveralls
